deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mms-app
  namespace: mms
spec:
  selector:
    app: mms-app
  ports:
    - port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
