deploy/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mms-redis
  namespace: mms
spec:
  selector:
    app: mms-redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  type: ClusterIP
